<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloWorld</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="hello_world2">Hello world, Second Page!</string>
    <string name="addButton">Add</string>
    <string name="removeButton">Remove</string>
    <string name="hintMaint">Buy Tires</string>
    <string name="hintInterval">50000</string>
    <string name="maint_string">Some Maintenance</string>
    <string name="database_path">/data/data/com.sandz.HelloWorld/databases/</string>
    <string name="database_name">maintenance.db</string>
    <string name="schema_version">1</string>
    <string name="table_name">Maintenance</string>
    <string name="column_id">_id</string>
    <string name="column1_name">maintenance_name</string>
    <string name="column2_name">interval_mileage</string>
    <string name="popup_title">Add Your Maintenance</string>
    <string name="popup_text">Edit:</string>
    
</resources>
