<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_text" />

    <EditText
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dip"
        android:layout_weight="0.45"
        android:hint="@string/hintMaint"
        android:inputType="text" />

    <EditText
        android:id="@+id/title2"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dip"
        android:ems="10"
        android:hint="@string/hintInterval"
        android:inputType="number" >

        <requestFocus />
    </EditText>

</LinearLayout>